--- a/spring-demo/build.gradle
+++ b/spring-demo/build.gradle
@@ -10,10 +10,12 @@ repositories {
 }
 
 dependencies {
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
     compile(project(":spring-core"))
     compile(project(":spring-beans"))
     compile(project(":spring-aop"))
     compile(project(":spring-context"))
+    compile(project(":spring-jdbc"))
     optional("org.aspectj:aspectjweaver")
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
