--- a/spring-demo/src/main/resources/importBeanDefinitionRegister.properties
+++ b/spring-demo/src/main/resources/importBeanDefinitionRegister.properties
@@ -1,1 +1,1 @@
-import.expression=org.springframework.demo.ioc.service.impl.*
+import.expression=org.springframework.demo.ioc.annotation.service.impl.*
