--- a/spring-demo/src/main/resources/importSelector.properties
+++ b/spring-demo/src/main/resources/importSelector.properties
@@ -1,1 +1,1 @@
-importSelector.expression=org.springframework.demo.ioc.service.impl.*
+importSelector.expression=org.springframework.demo.ioc.annotation.service.impl.*
