--- a/spring-demo/src/main/resources/jdbc.yml
+++ b/spring-demo/src/main/resources/jdbc.yml
@@ -1,6 +1,6 @@
 
 jdbc:
   driver: com.mysql.cj.jdbc.Driver
-  url: jdbc:mysql://47.102.156.134:3306/mysql
+  url: jdbc:mysql://47.102.156.134:3306/cms?characterEncoding=utf-8
   username: root
   password: 123456
