--- a/spring-demo/build.gradle
+++ b/spring-demo/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     compile group: 'javax.servlet.jsp', name: 'javax.servlet.jsp-api', version: '2.3.3'
     // yaml文件解析工具类
     compile group: 'org.yaml', name: 'snakeyaml', version: '1.27'
+    /*providedCompile group: 'org.projectlombok', name: 'lombok', version: '1.18.16'*/
 
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
     compile(project(":spring-core"))
