--- a/spring-demo/build.gradle
+++ b/spring-demo/build.gradle
@@ -10,6 +10,9 @@ repositories {
 }
 
 dependencies {
+    // JSR 303 API
+    compile group: 'javax.inject', name: 'javax.inject', version: '1'
+
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
     compile group: 'javax.servlet.jsp', name: 'javax.servlet.jsp-api', version: '2.3.3'
     // yaml文件解析工具类
